--- a/style.css
+++ b/style.css
@@ -31,3 +31,10 @@
     color: #ffc107 !important;
   }
   /* ////////////////////////////////////////// END HEADER /////////////////////////////// */
+  /* //////////////////////////////////////// FEATURE SECTION  /////////////////////// */
+.ho-sh:hover {
+    box-shadow: 10px 10px 10px 10px rgba(96, 96, 96);
+    transition: box-shadow 0.3s ease;
+  }
+  /*  ///////////////////////////////////// END FEATURE SECTION ///////////////////////////////  */
+  
