--- a/style.css
+++ b/style.css
@@ -37,4 +37,28 @@
     transition: box-shadow 0.3s ease;
   }
   /*  ///////////////////////////////////// END FEATURE SECTION ///////////////////////////////  */
-  
+/* ///////////////////////////////////COURSES SECTION  /////////////////////////////////  */
+.bgg:hover {
+    box-shadow: 0px 0px 10px 15px rgb(96, 96, 96);
+    background-color: white;
+    transition: ease-in-out 0,5s;
+   h5{
+      color: rgb(255, 204, 0);
+    } 
+    a{
+      color: rgb(255, 204, 0);
+      background-color: black;
+      transition: ease-in-out 0,5s;
+    }
+    img{
+      transform: scale(1.1);
+    }
+  }
+  .card{
+    border: none;
+  }
+  a.li-hover-footer:hover {
+    color: white;
+  }
+  /* ///////////////////////////////////END COURSES SECTION  /////////////////////////////////  */
+    
