--- a/style.css
+++ b/style.css
@@ -185,3 +185,13 @@
   }
   
   /* ///////////////////////////////////////////////// END UPCOMING EVENTS //////////////////////// */
+  /* ///////////////////////////////////////////////FOOTER//////////////////////////////// */
+a.li-hover-footer:hover {
+    color: white;
+  }
+  .foot:hover{
+    color: white;
+  
+  }
+  /* ///////////////////////////////////////////////END FOOTER //////////////////////////////// */
+  
